<resources>
    <string name="app_name">AppCliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menúes</string>
    <string name="menu_cuenta">Mi Cuenta</string>
    <string name="menu_historial">Historial de Pedidos</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buton_menu_dia">Almuerzo de hoy</string>
    <string name="button_menu_semanal">Viandas para la semana</string>
    <string name="descripcionPortada">Imagen de categoria</string>
    <string name="descripcionOpciones">descripcion?</string>


    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="ver_ingredientes">Ingredientes</string>
    <string name="menu_pedido">Mi pedido</string>
    <string name="enviar_pedido">Enviar Pedido</string>
    <string name="enviar_domicilio">Estoy en mi domicilio</string>
    <string name="ingresar_ubicacion">Estoy fuera del campus</string>
    <string name="txt_calle">Calle</string>
    <string name="txtNumero">N° Calle</string>
    <string name="txt_retirar">Retirar en Buffet</string>
    <string name="txt_titulo_direccion">Su direccion es:</string>
    <string name="btn_confirmar_direccion">Confirmar</string>
    <string name="txt_ciudad">Ciudad</string>
    <string name="txt_ingrese_ubicacion">Ingrese su ubicación</string>
    <string name="txt_calles_medio">¿Entre que calles se encuentra?</string>
    <string name="n_piso">N° Piso</string>
    <string name="n_departamento">N° Departamento</string>
    <string name="nombre_almuerzo_ingredientes">Nombre Almuerzo</string>
    <string name="ingredientes_almuerzo">Ingredientes</string>
    <string name="id_plato_md">id</string>
    <string name="nombre_vianda_ingredientes">Nombre Vianda</string>
    <string name="ingredientes_vianda">Ingredientes Vianda</string>
    <string name="nombre_desayuno">Nombre Desayuno</string>
    <string name="ingredientes_desayuno">Ingredientes Desayuno</string>
    <string name="txt_singing_cuenta">Datos de la Cuenta</string>
    <string name="id_plato_mm">id_plato_mm</string>
    <string name="id_plato_ms">id_plato_ms</string>
    <string name="id_plato_pedido">id_plato_pedido</string>
    <string name="eliminar_pedido">Eliminar Plato</string>
    <string name="envio_al_campus">Estoy en el campus</string>
    <string name="direccion_tomada_de_usuario">direccion tomada de usuario</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="enviar_pedido_ti">Enviar Pedido</string>
    <string name="su_direcion_ti">Su dirección</string>
    <string name="su_ubicacion_ti">Su ubicación</string>
    <string name="su_ubicacion_campus_ti">Su ubicación en el campus</string>
    <string name="numero_de_aula">¿En que aula se encuentra?</string>
    <string name="numero_de_oficina">¿En que oficina se encuentra?</string>
    <string name="confirmar">Confirmar</string>
    <string name="donde_se_encuentra">¿Donde se encuentra?</string>
    <string name="buffet_de_juan">Buffet de Juan</string>
    <string name="txt_cerrar_sesion">Cerrar Sesión</string>
    <string name="seguimiento_pedido">Seguimiento Pedido</string>
    <string name="title_activity_maps">Map</string>
    <string name="ver_menues">Ver Menues</string>

</resources>
