<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_pedido" />

        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_seguimiento"
            android:icon="@drawable/ic_youtube_searched_for_black_24dp"
            android:title="@string/seguimiento_pedido" />

    </group>
</menu>
