<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.menusemanal.DetallesViandaFragment">

    <ImageView
        android:id="@+id/imagenIngredientesVianda"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/descripcionPortada"
        android:src="@drawable/fondo"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txtNombreVianda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_vegano"
        android:text="@string/nombre_vianda_ingredientes"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtIngredientesVianda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ingredientes_vianda"
        android:textSize="18sp" />

</LinearLayout>