<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.menumate.DetallesMateFragment">

    <ImageView
        android:id="@+id/imagenIngredientesDesayunoMerienda"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/descripcionPortada"
        android:src="@drawable/fondo"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txtNombreDesayuno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_carnico_transparente"
        android:text="@string/nombre_desayuno"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtIngredientesDesayunoMerienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ingredientes_desayuno"
        android:textSize="18sp" />

</LinearLayout>