<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pedido.UbicacionCampusFragment">


    <EditText
        android:id="@+id/editNumeroOficina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numero_de_oficina"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editNumeroAula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editNumeroAula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numero_de_aula"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmarUbicacionCampus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumeroOficina"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnConfirmarUbicacionCampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/window_background"
        android:background="@drawable/boton_rendondo"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumeroAula" />

</androidx.constraintlayout.widget.ConstraintLayout>