<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragmentInicio">

    <fragment
        android:id="@+id/fragmentPortada"
        android:name="com.example.appcliente.FragmentPortada"
        android:label="fragment_portada"
        tools:layout="@layout/fragment_portada" >
        <action
            android:id="@+id/action_fragmentPortada_to_fragmentSinging"
            app:destination="@id/fragmentSinging" />
        <action
            android:id="@+id/action_fragmentPortada_to_fragmentLogin"
            app:destination="@id/fragmentLogin" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appcliente.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_fragmentPortada"
            app:destination="@id/fragmentPortada" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu_dia"
        android:name="com.example.appcliente.ui.home.menudia.MenuDiaFragment"
        android:label="Ingredientes"
        tools:layout="@layout/fragment_detalles_plato">
        <action
            android:id="@+id/action_nav_menu_dia_to_nav_detalles_dia"
            app:destination="@id/nav_detalles_dia" />

    </fragment>

    <fragment
        android:id="@+id/nav_detalles_dia"
        android:name="com.example.appcliente.ui.home.menudia.DetallesPlatoFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta" />


    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.example.appcliente.ui.cuenta.CuentaFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/nav_pedido"
        android:name="com.example.appcliente.ui.pedido.PedidoFragment"
        android:label="@string/menu_pedido"
        tools:layout="@layout/fragment_pedido" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.example.appcliente.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />
    <fragment
        android:id="@+id/fragmentLogin"
        android:name="com.example.appcliente.FragmentLogin"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_fragmentLogin_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSinging"
        android:name="com.example.appcliente.FragmentSinging"
        android:label="fragment_singing"
        tools:layout="@layout/fragment_singing" >
        <action
            android:id="@+id/action_fragmentSinging_to_fragmentLogin"
            app:destination="@id/fragmentLogin" />
    </fragment>
    <fragment
        android:id="@+id/fragmentInicio"
        android:name="com.example.appcliente.FragmentInicio"
        android:label="fragment_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_fragmentInicio2_to_fragmentPortada"
            app:destination="@id/fragmentPortada" />
        <action
            android:id="@+id/action_fragmentInicio2_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


</navigation>